--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,11 @@
     </head>
     <body>
         <div id="container">
-            <div id="cabecera ">
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">
+                    Tu blog de confianza
+                </span>
                 Cabecera
             </div>
             <div id="post">
