--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,14 @@
                 <h1>este es el titulo atractivo einteresante</h1>
                 <p>Y este es el parrafo de inicio donde vamos
                      a explicar las cosas increibles que 
-                     se pueden hacer con ramas.</p>
+                     se pueden hacer con ramas.
+                </p>
+                <p>
+                    los blog son la mejor forma de compartir informacion y tus ideas. 
+                    Mucho mas que ir a conferencias o salir en youtube
+                    Excepto si eres un rocktar, Pero estadisticamente no lo eres... por ahora.
+                </p>
+
             </div>
         </div>
     </body>
