--- a/blogpost.html
+++ b/blogpost.html
@@ -8,9 +8,8 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog de cabecera
                 </span>
-                Cabecera
             </div>
             <div id="post">
                 <h1>este es el titulo atractivo einteresante</h1>
