agregue suscripcion, cambie la cabecera y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,9 +8,8 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">
-                    Tu blog de confianza
+                    Tu blog de maestro
                 </span>
-                Cabecera
             </div>
             <div id="post">
                 <h1>este es el titulo atractivo einteresante</h1>
@@ -23,7 +22,9 @@
                     Mucho mas que ir a conferencias o salir en youtube
                     Excepto si eres un rocktar, Pero estadisticamente no lo eres... por ahora.
                 </p>
-
+                <p>
+                    suscribete y dale like
+                </p>
             </div>
         </div>
     </body>
