--- a/blogpost.html
+++ b/blogpost.html
@@ -26,6 +26,9 @@ d<html>
                     suscribete y dale like
                 </p>
             </div>
+            <div id="footer">
+                Hecho con amor en platzi &lt;3
+            </div>
         </div>
     </body>
 
