Tildes y typos arreglados en el post

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@ d<html>
             <div id="post">
                 <h1>este es el titulo atractivo einteresante</h1>
                 <p>Y este es el parrafo de inicio donde vamos
-                     a explicar las cosas increibles que 
+                     a explicar las cosas increíbles que 
                      se pueden hacer con ramas.
                 </p>
                 <p>
