--- a/blogpost.html
+++ b/blogpost.html
@@ -14,8 +14,8 @@ d<html>
             </div>
             <div id="post">
                 <h1>este es el titulo atractivo einteresante</h1>
-                <p>Y este es el parrafo de inicio donde vamos
-                     a explicar las cosas increíbles que 
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos
+                     a explicar las cosas incre&iacute;bles que 
                      se pueden hacer con ramas.
                 </p>
                 <p>
