--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@ d<html>
                      a explicar las cosas incre&iacute;bles que 
                      se pueden hacer con ramas.
                 </p>
+                <p><img src="imagenes/Scar.jpg" alt="" width="100%"></p>
                 <p>
                     los blog son la mejor forma de compartir informacion y tus ideas. 
                     Mucho mas que ir a conferencias o salir en youtube
