--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@ d<html>
                 <img src="imagenes/dragon.png" id="logo">
                 Hyperblog
                 <span id="tagline">
-                    Tu blog de cabecera
+                    Tu blog de confianza
                 </span>
             </div>
             <div id="post">
